feat: 更新Continue的config文件中 customCommands中name为：生成YAPI接口类型的prompt，同时生成一份prompt工具

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "yapi-export",
     "displayName": "YAPI Sync Pro",
-    "description": "可视化YAPI接口导出工具",
+    "description": "可视化YAPI接口导出工具，可同步YAPI接口信息到Continue插件中的prompt中",
     "version": "1.1.0",
+    "repository": "https://github.com/xiaoguhexiaotian/yapi-export.git",
     "author": {
         "name": "Guji"
     },
